GeneWeb version 4.02
--------------------

* GeneWeb server or CGI (gwd)
  - [11 Apr 01] The Gregorian and Julian calendars did not work for years
    less than 1800 BC. Fixed.

GeneWeb version 4.01
--------------------

* Installation
  - [18 Mar 01] Fixed bug in Linux rpm package: the 'restart' of
    gwd did not work; it worked only by using 'stop' and 'start'.

* Languages
  - [05 Apr 01] Renamed some languages codes to be in conformance with
    the standard (http://www.oasis-open.org/cover/iso639a.html):
      * Catalan: ct replaced by ca
      * Chinese: cn replaced by zh
      * Danish: dk replaced by da
      * Swedish: se replaced by sv
    But old codes are still working, thanks to an alias language file.
    The code of the new language, Brazilian Portuguese, is pt-br.
  - [14 Mar 01] Added Brazilian Portuguese (Paulo Francisco Sedrez).

* GeneWeb server or CGI (gwd)
  - [03 Apr 01] In merge page, proposes the list of all persons having the
    same first name and same surname (and different number).
  - [30 Mar 01] In ancestors page, in long display mode, added the ability
    to have only the selected generation.
  - [25 Mar 01] Improved the displaying of phrases like "xxx is a
    grandchild of a nth cousin of yyy" in some languages (Swedish,
    Danish, French). Indeed in Swedish and Danish, the word "grandchild"
    is different according to the intermediate person (the child)'s sex.
    And in French the word "nth cousin" is different if it is a man or a
    woman.
  - [18 Mar 01] Fixed bug: the data base forum did not work under Windows.
  - [18 Mar 01] Fixed bug: in case of automatic merge, the source field
    of the second person or family was lost.
  - [18 Mar 01] Improved displaying of sources in personal pages: the
    identical sources are grouped together in the same line.
  - [17 Mar 01] Fixed problem of displaying of history of updates: it
    was sometimes very very slow.